@@ -46,7 +46,8 @@
 						)
 					);
 
-				if ($object = $this->cachedFetchObject($query, true)) {
+				// expires argument will be ignored by our cachers
+				if ($object = $this->cachedFetchObject($query, null, true)) {
 					return $object;
 				} else {
 					$this->cacheNullById($id);
@@ -75,7 +76,8 @@
 					return $this->dao->fetchEncapsulants($object);
 				
 			} else {
-				if ($object = $this->cachedFetchObject($query, false))
+				// expires argument will be ignored by our cachers
+				if ($object = $this->cachedFetchObject($query, null, false))
 					return $object;
 				else {
 					$this->cacheByQuery($query, Cache::NOT_FOUND);
