@@ -1,5 +1,9 @@
 # $Id$
 
+2008-02-17	Konstantin V. Arkhipov
+
+	* main/DAOs/Workers/: added expires argument to cachedFetchObject().
+
 2008-02-15	Konstantin V. Arkhipov
 
 	* main/DAOs/StorableDAO.class.php: mergeWithOld() renamed to unite().
